// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBarItem > should render 1`] = `
<DocumentFragment>
  <li
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50"
    >
      <span
        class="font-semibold"
      >
        General
      </span>
    </div>
  </li>
</DocumentFragment>
`;

exports[`SideBarItem > should render as active 1`] = `
<DocumentFragment>
  <li
    class="relative cursor-default"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="group relative flex h-12 items-center rounded-lg px-5 transition-all bg-theme-secondary-200 text-theme-primary-600 dark:bg-theme-dark-950 dark:text-theme-dark-50 dim:bg-theme-dim-950 dim:text-theme-dim-50"
    >
      <span
        class="font-semibold"
      >
        General
      </span>
    </div>
  </li>
</DocumentFragment>
`;
